# orcanime-api-rust

./: .gitignore  Cargo.toml  Dockerfile  watch-schema.sh
.agents/: SESSION_SNAPSHOT.md
.github/workflows/: ci.yml  ingest-cron.yml  keep-alive-workers.yml  sync-from-hf.yml  sync-to-hf.yml
apps/api/: Dockerfile  main.py
apps/api/db/: models.py
apps/api/routes/: collection.py  comments.py  home_v2.py  social.py  stream_v2.py  webhook.py
apps/api/schemas/: social.py
apps/api/scripts/: aggregate_stats.py  backfill_mal_id.py  batch_gdrive_ingest.py  delayed_ingest_frieren.py  force_sync_kuronime.py  gdrive_downloader.py  ingest_pending.py  mass_resync_metadata.py  real_purge.py  retry_failed_ingest.py  setup_qstash_ping.py  sync_10_hours_bg.py
apps/api/services/: anilist.py  db.py  health_metrics.py  pipeline.py  prefetch.py  providers.py  queue.py  reconciler.py  stream_cache.py
apps/api/utils/: extractor.py
apps/web/: next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/public/: sw.js
apps/worker-proxy/: package.json  setup_proxies.sh  wrangler.toml
archive/: test_cf_cache.py  test_proxy_url.py  test_proxy_url2.py
scripts/: pre-commit  setup-hooks.sh
src/: main.rs
src/db/: connection.rs  queries.rs
src/providers/: base.rs  doronime.rs  kuronime.rs  mod.rs  oploverz.rs  samehadaku.rs  types.rs
src/routes/: anilist.rs  manga.rs  mod.rs  pipeline.rs  schedule.rs  scraper.rs
src/services/: anilist.rs
src/utils/: crypto.rs
worker-proxy/: package-lock.json  package.json
worker-proxy/src/: index.js
(+62 files in other folders)
