[package]
name = "orcanime-api-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async HTTP Client (For Scraping/Proxying)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots", "charset"] }
scraper = "0.19"

# Database (Supabase Postgres)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# Crypto (for AES decryption)
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
base64 = "0.22"
block-padding = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
urlencoding = "2.1"
moka = { version = "0.12", features = ["future"] }
strsim = "0.11"

[profile.release]
opt-level = "z"     # Optimize for size
lto = false         # Disable LTO to prevent OOM on HF builder
codegen-units = 16  # Prevent OOM on HuggingFace builder
panic = "abort"     # Abort on panic to save binary size
strip = true        # Strip symbols from binary
